crates/wdl-grammar/tests/parsing/imports-symbolic-wildcard/source.wdl
version 1.4

import * from openwdl/csvkit
import * from openwdl/csvkit as csv
